--- a/SQL/Conekta.ipynb
+++ b/SQL/Conekta.ipynb
@@ -28,11 +28,9 @@
    },
    "outputs": [],
    "source": [
-    "!pip install mysql-connector-python\n",
-    "!pip install sqlalchemy\n",
+    "!sudo apt-get update\n",
     "!sudo apt-get install libmysqlclient-dev -y\n",
-    "!pip install mysqlclient\n",
-    "!pip install psycopg2-binary\n"
+    "!pip install -r requirements.txt"
    ]
   },
   {
@@ -133,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_sales_view = 'select b.company_name, a.created_at, sum(a.amount) from Transactions a Left JOIN Companies b on a.company_id = b.company_id group by b.company_name, a.created_at'\n",
+    "create_sales_view = 'CREATE VIEW Sales AS (select b.company_name, a.created_at, sum(a.amount) from Transactions a Left JOIN Companies b on a.company_id = b.company_id group by b.company_name, a.created_at)'\n",
     "connection.execute(create_sales_view)"
    ]
   }
